[project]
name = "news-aggregator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dagster",
    "dagster-k8s",
    "dagster-postgres",
    "duckdb>=1.5.0",
    "httpx>=0.28.1",
    "minio",
    "lxml>=6.0.2",
    "pytz>=2026.1.post1",
    "dagster-webserver>=1.12.20",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long — handled by ruff-format
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.5",
]
